config: simplify; only load from soundboards dir

--- a/soundboard.toml
+++ b/soundboard.toml
@@ -1,76 +1,7 @@
-# input_device = "Mikrofonarray (Realtek High Definition Audio(SST))"
-# output_device = "Speaker/HP (Realtek High Definition Audio(SST))"
-#loopback_device = "CABLE Input (VB-Audio Virtual Cable)" # change to your virtual loopback output
+# input_device = "Mikrofonarray (Realtek High Definition Audio(SST))" # optional else default device
+# output_device = "Speaker/HP (Realtek High Definition Audio(SST))" # optional else default device
+loopback_device = "CABLE Input (VB-Audio Virtual Cable)" # required: change to your virtual loopback output
 
-stop_hotkey = "ALT-S"
-http_server = true # 3030 is the default port
-no_gui = false
-
-[[soundboard]]
-name = "default"
-
-    [[soundboard.sound]]
-    name = "Nicht so tief, Rüdiger!"
-    path = "sounds/nicht-so-tief-rudiger.mp3"
-    hotkey = "CTRL-P"
-
-    [[soundboard.sound]]
-    name = "Razor1911 Soldier of Fortune"
-    path = "sounds/vodka/Razor1911 - Soldier Of Fortune intro.xm"
-    hotkey = "CTRL-SHIFT-BACKSPACE"
-
-    [[soundboard.sound]]
-    name = "It's time to duel"
-    path = "sounds/its-time-to-duel.ogg"
-    hotkey = "ALT-9"
-
-    [[soundboard.sound]]
-    name = "Ich rascht aus"
-    path = "sounds/ich-rascht-aus.flac"
-    hotkey = "ALT-8"
-
-    [[soundboard.sound]]
-    name = "oneandonly"
-    path = "sounds/oneandonly.wav"
-    hotkey = "ALT-6"
-
-    [[soundboard.sound]]
-    name = "steam incoming"
-    path = "https://www.myinstants.com/media/sounds/message_2.mp3"
-    hotkey = "ALT-7"
-
-    [[soundboard.sound]]
-    name = "crab rave"
-    path = "https://www.myinstants.com/media/sounds/original_zeowGW1.mp3"
-
-    [[soundboard.sound]]
-    name="BRUH"
-    path="https://www.myinstants.com//media/sounds/movie_1.mp3"
-
-    [[soundboard.sound]]
-    name="Female Orgasm"
-    path="https://www.myinstants.com//media/sounds/epic.swf_1.mp3"
-
-    [[soundboard.sound]]
-    name="TeamSpeak 3"
-    path="https://www.myinstants.com//media/sounds/untitled_291.mp3"
-
-    [[soundboard.sound]]
-    name="Kann es sein das du Dumm bist"
-    path="https://www.myinstants.com//media/sounds/kann-es-sein-das-du-dumm-bist-oder-so-was.mp3"
-    
-    [[soundboard.sound]]
-    name="Krasser Kai Uwe"
-    path="sounds/krasserKaiUwe.mp3"
-    
-    [[soundboard.sound]]
-    name="Warteee EEEY"
-    path="sounds/warteEYY.mp3"
-
-[[soundboard]]
-name = "Myinstants.com"
-path = "myinstants_soundboard.toml"
-
-# [[soundboard]]
-# name = "Deutsche Memez"
-# path = "deutsche_memes.toml"
+stop_hotkey = "ALT-S" # stop all sound
+http_server = true # api and webui; 3030 is the default port
+no_gui = false # no native gui
