--- a/soundboards/favorites.toml
+++ b/soundboards/favorites.toml
@@ -3,12 +3,12 @@ position = 0
 
 [[sound]]
 name = 'Nicht so tief, Rüdiger!'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\nicht-so-tief-rudiger.mp3'
+path = 'nicht-so-tief-rudiger.mp3'
 hotkey = 'CTRL-P'
 
 [[sound]]
 name = 'Ich rascht aus'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\ich-rascht-aus.flac'
+path = 'ich-rascht-aus.flac'
 
 [[sound]]
 name = 'Kann es sein dass du dumm bist'
@@ -16,24 +16,24 @@ path = 'https://www.myinstants.com/media/sounds/kann-es-sein-das-du-dumm-bist-od
 
 [[sound]]
 name = 'Krasser Kai Uwe'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\krasserKaiUwe.mp3'
+path = 'krasserKaiUwe.mp3'
 
 [[sound]]
 name = 'Warteee EEEY'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\warteEYY.mp3'
+path = 'warteEYY.mp3'
 
 [[sound]]
 name = 'Soldier of Fortune'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\vodka/Razor1911 - Soldier Of Fortune intro.xm'
+path = 'vodka/Razor1911 - Soldier Of Fortune intro.xm'
 hotkey = 'CTRL-SHIFT-BACKSPACE'
 
 [[sound]]
 name = '''It's time to duel'''
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\its-time-to-duel.ogg'
+path = 'its-time-to-duel.ogg'
 
 [[sound]]
 name = 'the one and only'
-path = 'K:\projects\soundboard\target\debug\soundboards\favorites\oneandonly.wav'
+path = 'oneandonly.wav'
 
 [[sound]]
 name = 'steam incoming'
