--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ xm = ["libxm"]
 http = ["warp", "futures"]
 gui = ["iced", "iced_native"]
 autoloop = ["libpulse-binding"]
+telegram = ["tgbot"]
 
 [dependencies]
 miniaudio = "0.6"
@@ -36,6 +37,7 @@ strum_macros = "0.18"
 crossbeam-channel = "0.4"
 tokio = { version = "0.2", features = ["macros"] }
 
+tgbot = { version = "0.10", optional = true }
 libpulse-binding = { version = "2.0", features = ["pa_latest_common"], optional = true }
 
 iced = { version = "0.1", optional = true, features = ["tokio"] }
