--- a/soundboards/favorites.toml
+++ b/soundboards/favorites.toml
@@ -46,3 +46,15 @@ path = 'https://www.myinstants.com/media/sounds/original_zeowGW1.mp3'
 [[sound]]
 name = 'female orgasm'
 path = 'https://www.myinstants.com//media/sounds/epic.swf_1.mp3'
+
+[[sound]]
+name="Kranplätze"
+path="https://alleswirdaushackgemacht.de/audio/ronny/kranplaetze.mp3"
+
+[[sound]]
+name="Vollidioten"
+path="https://alleswirdaushackgemacht.de/audio/ronny/vollidioten.mp3"
+
+[[sound]]
+name="Hierhoch"
+path="https://alleswirdaushackgemacht.de/audio/ronny/hierhoch.mp3"
