--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ regex = "1"
 strum = "0.18"
 strum_macros = "0.18"
 crossbeam-channel = "0.4"
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "0.2", features = ["macros", "full"] }
+once_cell = "1.4"
 
 tgbot = { version = "0.10", optional = true }
 fuzzy-matcher = {version = "0.3", optional = true}
