--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -10,29 +10,29 @@ jobs:
       matrix:
         rust: [beta]
     steps:
-    - uses: hecrj/setup-rust-action@v1
-      with:
-        rust-version: ${{ matrix.rust }}
-    - uses: actions/checkout@master
-    - uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-   - name: Build soundboard binary
-     run: cargo build --verbose --release
-   - name: Archive soundboard binary
-     uses: actions/upload-artifact@v2
-     with:
-       name: soundboard-x86_64-debian-linux-gnu
-       path: target/release/soundboard
-   - name: Archive soundboard default config
-     uses: actions/upload-artifact@v2
-     with:
-       name: soundboard-x86_64-debian-linux-gnu
-       path: target/release/soundboard.toml
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+      - uses: actions/checkout@master
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build soundboard binary
+        run: cargo build --verbose --release
+      - name: Archive soundboard binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-debian-linux-gnu
+          path: target/release/soundboard
+      - name: Archive soundboard default config
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-debian-linux-gnu
+          path: target/release/soundboard.toml
 
   windows:
     runs-on: windows-latest
@@ -40,64 +40,64 @@ jobs:
       matrix:
         rust: [beta]
     steps:
-    - uses: hecrj/setup-rust-action@v1
-      with:
-        rust-version: ${{ matrix.rust }}
-    - uses: actions/checkout@master
-    - uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Install llvm
-      shell: powershell
-      run: |
-        Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-        scoop install llvm --global
-        echo "::set-env name=PATH::$env:PATH"
-    - name: Build soundboard binary
-      run: cargo build --verbose --release
-    - name: Archive soundboard binary
-      uses: actions/upload-artifact@v2
-      with:
-        name: soundboard-x86_64-pc-windows-msvc
-        path: target/release/soundboard.exe
-    - name: Archive soundboard default config
-      uses: actions/upload-artifact@v2
-      with:
-        name: soundboard-x86_64-pc-windows-msvc
-        path: target/release/soundboard.toml
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+      - uses: actions/checkout@master
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install llvm
+        shell: powershell
+        run: |
+          Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
+          scoop install llvm --global
+          echo "::set-env name=PATH::$env:PATH"
+      - name: Build soundboard binary
+        run: cargo build --verbose --release
+      - name: Archive soundboard binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-pc-windows-msvc
+          path: target/release/soundboard.exe
+      - name: Archive soundboard default config
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-pc-windows-msvc
+          path: target/release/soundboard.toml
 
   macos:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         rust: [beta]
     steps:
-    - uses: hecrj/setup-rust-action@v1
-      with:
-        rust-version: ${{ matrix.rust }}
-    - uses: actions/checkout@master
-    - uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Build soundboard binary
-      env:
-        MACOSX_DEPLOYMENT_TARGET: 10.14
-      run: cargo build --verbose --release
-    - name: Archive soundboard binary
-      uses: actions/upload-artifact@v2
-      with:
-        name: soundboard-x86_64-apple-darwin
-        path: target/release/soundboard
-    - name: Archive soundboard default config
-      uses: actions/upload-artifact@v2
-      with:
-        name: soundboard-x86_64-apple-darwin
-        path: target/release/soundboard.toml
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+      - uses: actions/checkout@master
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build soundboard binary
+        env:
+          MACOSX_DEPLOYMENT_TARGET: 10.14
+        run: cargo build --verbose --release
+      - name: Archive soundboard binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-apple-darwin
+          path: target/release/soundboard
+      - name: Archive soundboard default config
+        uses: actions/upload-artifact@v2
+        with:
+          name: soundboard-x86_64-apple-darwin
+          path: target/release/soundboard.toml
