--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ crossbeam-channel = "0.4"
 tokio = { version = "0.2", features = ["macros", "full"] }
 once_cell = "1.4"
 winit = "0.22"
+dirs = "3"
 
 tgbot = { version = "0.10", optional = true }
 fuzzy-matcher = {version = "0.3", optional = true}
