--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ telegram = ["tgbot", "fuzzy-matcher"]
 
 [dependencies]
 miniaudio = "0.6"
-hotkey = { path = "extern/hotkey-rs", version = "0.3" }
+hotkey-soundboard = { path = "extern/hotkey-rs", version = "0.0.1" }
 clap = "3.0.0-beta.1"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
