--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = "cross-plattform soundboard: play sounds over your microphone"
 authors = ["Karl Skomski <karl@skomski.com>", "Corin Baurmann <corin.baurmann@fu-berlin.de>", "Elena Frank <elena.frank@protonmail.com>"]
 categories = ["multimedia::audio"]
+license = "Unlicense"
+repository = "https://github.com/gamebooster/soundboard"
 edition = "2018"
 
 [profile.release]
