cargo: exclude soundboards and extern for package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ categories = ["multimedia::audio"]
 license = "Unlicense"
 repository = "https://github.com/gamebooster/soundboard"
 edition = "2018"
+exclude = [
+    "/soundboards",
+    "/extern"
+]
 
 [profile.release]
 lto = true
