telegram: add incoming sound to telegram soundboard

--- a/soundboards/myinstants.com_5.toml
+++ b/soundboards/myinstants.com_5.toml
@@ -1,3 +1,4 @@
+disabled = true
 name = 'myinstants.com'
 
 [[sound]]
@@ -277,9 +278,9 @@ name = 'Victory!'
 path = 'https://www.myinstants.com//media/sounds/victoryff.swf.mp3'
 
 [[sound]]
+hotkey = 'CTRL-P'
 name = 'Here Comes The Money'
 path = 'https://www.myinstants.com//media/sounds/money_2.mp3'
-hotkey = 'CTRL-P'
 
 [[sound]]
 name = 'Lalalalala'
