--- a/soundboard.toml
+++ b/soundboard.toml
@@ -4,4 +4,4 @@
 
 http_server = true # api and webui; 3030 is the default port
 no_gui = false # no native gui
-stop_hotkey = "ALT-S" # stop all sound
+stop_hotkey = "CTRL-ALT-E" # stop all sound
