--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ reqwest = {version = "0.10", features = ["blocking"]}
 serde = {version = "1.0", features = ["derive"]}
 strum = "0.18"
 strum_macros = "0.18"
-tokio = {version = "0.2", features = ["macros", "full"]}
+tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
 winit = "0.22"
 
