--- a/soundboards/favorites.toml
+++ b/soundboards/favorites.toml
@@ -2,30 +2,48 @@ name = 'favorites'
 position = 0
 
 [[sound]]
-hotkey = 'CTRL-P'
-name = 'Nicht so tief, Rüdiger!'
-path = 'nicht-so-tief-rudiger.mp3'
-
-[[sound]]
-hotkey = 'CTRL-0'
-name = 'wo ist der latest shit'
-path = 'wo ist der latest shit.mp3'
-
-[[sound]]
-name = 'Ich rascht aus'
-path = 'ich-rascht-aus.flac'
-
-[[sound]]
-name = 'Kann es sein dass du dumm bist'
-path = 'https://www.myinstants.com/media/sounds/kann-es-sein-das-du-dumm-bist-oder-so-was.mp3'
-
-[[sound]]
+hotkey = 'CTRL-SHIFT-3'
 name = 'Krasser Kai Uwe'
 path = 'krasserKaiUwe.mp3'
 
 [[sound]]
+hotkey = 'CTRL-2'
+name = 'Ich rascht aus'
+path = 'ich-rascht-aus.flac'
+
+[[sound]]
 name = 'Warteee EEEY'
 path = 'warteEYY.mp3'
+
+[[sound]]
+name = 'Woran hats gelegen'
+path = 'Worahnhatsgelegen.mp3'
+
+[[sound]]
+name = 'Kranplätze'
+path = 'https://alleswirdaushackgemacht.de/audio/ronny/kranplaetze.mp3'
+
+[[sound]]
+name = 'Vollidioten'
+path = 'https://alleswirdaushackgemacht.de/audio/ronny/vollidioten.mp3'
+
+[[sound]]
+name = 'Hierhoch'
+path = 'https://alleswirdaushackgemacht.de/audio/ronny/hierhoch.mp3'
+
+[[sound]]
+hotkey = 'CTRL-1'
+name = 'wo ist der latest shit'
+path = 'wo ist der latest shit.mp3'
+
+[[sound]]
+name = 'Wer wird Millionär - Showstart'
+path = 'https://www.myinstants.com//media/sounds/wer-wird-millionar-soundtracks-soundstart.mp3'
+
+[[sound]]
+hotkey = 'CTRL-3'
+name = 'Summasummarum'
+path = 'Summasummarum.mp3'
 
 [[sound]]
 hotkey = 'CTRL-SHIFT-BACKSPACE'
@@ -41,6 +59,7 @@ name = 'the one and only'
 path = 'oneandonly.wav'
 
 [[sound]]
+hotkey = 'CTRL-ALT-S'
 name = 'steam incoming'
 path = 'https://www.myinstants.com/media/sounds/message_2.mp3'
 
@@ -49,17 +68,6 @@ name = 'crab rave'
 path = 'https://www.myinstants.com/media/sounds/original_zeowGW1.mp3'
 
 [[sound]]
-name = 'female orgasm'
-path = 'https://www.myinstants.com//media/sounds/epic.swf_1.mp3'
-
-[[sound]]
-name = 'Kranplätze'
-path = 'https://alleswirdaushackgemacht.de/audio/ronny/kranplaetze.mp3'
-
-[[sound]]
-name = 'Vollidioten'
-path = 'https://alleswirdaushackgemacht.de/audio/ronny/vollidioten.mp3'
-
-[[sound]]
-name = 'Hierhoch'
-path = 'https://alleswirdaushackgemacht.de/audio/ronny/hierhoch.mp3'
+hotkey = 'CTRL-P'
+name = 'Nicht so tief, Rüdiger!'
+path = 'nicht-so-tief-rudiger.mp3'
