--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ reqwest = {version = "0.10", features = ["blocking"]}
 serde = {version = "1.0", features = ["derive"]}
 strum = "0.18"
 strum_macros = "0.18"
+thiserror = "1.0"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
 winit = "0.22"
