opus: add to default_features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@ lto = "fat"
 
 [features]
 autoloop = ["libpulse-binding", "ctrlc"]
-default = ["mp3", "flac", "vorbis", "wav", "http", "gui"]
+default = ["mp3", "flac", "vorbis", "wav", "http", "gui", "opus"]
 flac = ["claxon"]
 gui = ["iced", "iced_native"]
 http = ["warp", "futures"]
 mp3 = ["minimp3", "mp3-duration"]
-opus = ["audiopus", "ogg"]
+opus = ["audiopus", "ogg", "ogg_metadata"]
 telegram = ["tgbot", "fuzzy-matcher"]
 terminal-ui = ["tui", "crossterm"]
 vorbis = ["lewton", "ogg_metadata"]
