--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,6 +21,8 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install autoconf
+        run: sudo apt-get install autoconf libtool automake
       - name: Build soundboard binary
         run: cargo build --verbose --release
       - name: Archive soundboard binary
@@ -79,6 +81,15 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: install opus
+        run: |
+          wget https://homebrew.bintray.com/bottles/pkg-config-0.29.2_3.catalina.bottle.tar.gz
+          tar xvf pkg-config-0.29.2_3.catalina.bottle.tar.gz pkg-config/0.29.2_3/bin/
+          cp -a pkg-config/0.29.2_3/bin /usr/local
+          wget https://homebrew.bintray.com/bottles/opus-1.3.1.catalina.bottle.1.tar.gz
+          tar -xvf opus-1.3.1.catalina.bottle.1.tar.gz opus/1.3.1/lib opus/1.3.1/include
+          cp -a opus/1.3.1/lib /usr/local
+          cp -a opus/1.3.1/include /usr/local
       - name: Build soundboard binary
         env:
           MACOSX_DEPLOYMENT_TARGET: 10.14
