--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ mp3 = ["minimp3", "mp3-duration"]
 opus = ["audiopus", "ogg", "ogg_metadata"]
 telegram = ["tgbot", "fuzzy-matcher"]
 terminal-ui = ["tui", "crossterm"]
+text-to-speech = ["tonic", "prost"]
 vorbis = ["lewton", "ogg_metadata"]
 wav = ["hound"]
 xm = ["libxm-soundboard"]
@@ -51,6 +52,9 @@ thiserror = "1"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
 winit = "0.22"
+
+prost = {version = "0.6", optional = true}
+tonic = {version = "0.3.0", features = ["prost", "tls", "tls-roots"], optional = true}
 
 fuzzy-matcher = {version = "0.3", optional = true}
 tgbot = {version = "0.10", optional = true}
