--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lto = "fat"
 
 [features]
 autoloop = ["libpulse-binding", "ctrlc"]
-default = ["mp3", "flac", "vorbis", "wav", "http", "gui", "opus"]
+default = ["mp3", "flac", "vorbis", "wav", "http", "opus"]
 flac = ["claxon"]
 gui = ["iced", "iced_native"]
 http = ["warp", "futures"]
@@ -40,17 +40,20 @@ dirs = "3"
 env_logger = "0.7"
 hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.2"}
 log = "0.4"
+mime_guess = "2.0.3"
 miniaudio = "0.7"
 once_cell = "1.4"
 parking_lot = "0.11"
 regex = "1"
 reqwest = {version = "0.10", features = ["blocking"]}
+rust-embed = {version = "5.6.0", features = ["interpolate-folder-path"]}
 serde = {version = "1.0", features = ["derive"]}
 strum = "0.18"
 strum_macros = "0.18"
 thiserror = "1"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
+webbrowser = "0.5.4"
 winit = "0.22"
 
 prost = {version = "0.6", optional = true}
@@ -79,7 +82,7 @@ ogg = {version = "0.7", optional = true}
 ogg_metadata = {version = "0.4", optional = true}
 
 crossterm = {version = "0.17", optional = true}
-tui = {version = "0.9", optional = true, default-features = false, features = ['crossterm']}
+tui = {version = "0.10", optional = true, default-features = false, features = ['crossterm']}
 
 [build-dependencies]
 fs_extra = "1"
