--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ xm = ["libxm-soundboard"]
 
 [dependencies]
 anyhow = "1"
+backtrace = "0.3"
 bytes = "0.5"
 clap = "3.0.0-beta.1"
 crossbeam-channel = "0.4"
@@ -41,7 +42,7 @@ env_logger = "0.7"
 hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.2"}
 log = "0.4"
 mime_guess = "2.0.3"
-miniaudio = "0.7"
+miniaudio = "0.10.0"
 once_cell = "1.4"
 parking_lot = "0.11"
 regex = "1"
@@ -53,7 +54,7 @@ strum_macros = "0.18"
 thiserror = "1"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
-webbrowser = "0.5.4"
+webbrowser = "0.5.5"
 winit = "0.22"
 
 prost = {version = "0.6", optional = true}
