--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ strum_macros = "0.18"
 thiserror = "1"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
+ulid = {version = "0.4", features = ["serde"]}
 webbrowser = "0.5.5"
 winit = "0.22"
 
