--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ log = "0.4"
 mime_guess = "2.0.3"
 miniaudio = "0.10.0"
 once_cell = "1.4"
+owning_ref = "0.4"
 parking_lot = "0.11"
 regex = "1"
 reqwest = {version = "0.10", features = ["blocking"]}
