--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ regex = "1"
 reqwest = {version = "0.10", features = ["blocking"]}
 rust-embed = {version = "5.6.0", features = ["interpolate-folder-path"]}
 serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 strum = "0.18"
 strum_macros = "0.18"
 thiserror = "1"
