add spotify as source

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ gui = ["iced", "iced_native"]
 http = ["warp", "futures"]
 mp3 = ["minimp3", "mp3-duration"]
 opus = ["audiopus", "ogg", "ogg_metadata"]
+spotify = ["librespot", "futures"]
 telegram = ["tgbot", "fuzzy-matcher"]
 terminal-ui = ["tui", "crossterm"]
 text-to-speech = ["tonic", "prost"]
@@ -66,6 +67,8 @@ tonic = {version = "0.3.0", features = ["prost", "tls", "tls-roots"], optional =
 
 fuzzy-matcher = {version = "0.3", optional = true}
 tgbot = {version = "0.10", optional = true}
+
+librespot = {version = "0.1.2", optional = true}
 
 ctrlc = {version = "3.1.5", features = ["termination"], optional = true}
 libpulse-binding = {version = "2.16", features = ["pa_latest_common"], optional = true}
