use old tokio_crate for spotify

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ gui = ["iced", "iced_native"]
 http = ["warp", "futures"]
 mp3 = ["minimp3", "mp3-duration"]
 opus = ["audiopus", "ogg", "ogg_metadata"]
-spotify = ["librespot", "futures"]
+spotify = ["librespot", "tokio-core"]
 telegram = ["tgbot", "fuzzy-matcher"]
 terminal-ui = ["tui", "crossterm"]
 text-to-speech = ["tonic", "prost"]
@@ -69,6 +69,7 @@ fuzzy-matcher = {version = "0.3", optional = true}
 tgbot = {version = "0.10", optional = true}
 
 librespot = {version = "0.1.2", optional = true}
+tokio-core = {version = "0.1", optional = true}
 
 ctrlc = {version = "3.1.5", features = ["termination"], optional = true}
 libpulse-binding = {version = "2.16", features = ["pa_latest_common"], optional = true}
