refactor command line args

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ http = ["warp", "futures"]
 mp3 = ["minimp3", "mp3-duration"]
 opus = ["audiopus", "ogg", "ogg_metadata"]
 spotify = ["librespot", "tokio-core"]
-telegram = ["tgbot", "fuzzy-matcher"]
-terminal-ui = ["tui", "crossterm"]
+telegram-bot = ["tgbot", "fuzzy-matcher"]
 text-to-speech = ["tonic", "prost"]
+textui = ["tui", "crossterm"]
 vorbis = ["lewton", "ogg_metadata"]
 wav = ["hound"]
 xm = ["libxm-soundboard"]
