--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Install autoconf
-        run: sudo apt-get install autoconf libtool automake
+      - name: Install autoconf and pulseaudio
+        run: sudo apt-get install autoconf libtool automake libpulse0
       - name: Build debug soundboard binary
         run: cargo build --verbose --features full,autoloop
       - name: Run tests
