--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ librespot = {version = "0.1.3", optional = true, default-features = false}
 tokio-core = {version = "0.1", optional = true}
 
 ctrlc = {version = "3.1.6", features = ["termination"], optional = true}
-libpulse-binding = {version = "2.16", features = ["pa_latest_common"], optional = true}
+libpulse-binding = {version = "2.16", default-features = false, features = ["pa_v8"], optional = true}
 
 iced = {version = "0.1", optional = true, features = ["tokio"]}
 iced_native = {version = "0.2", optional = true}
